remove deprecated on URL